Fri Apr 20 14:59:14 CDT 2001 Adam Heath <doogie@debian.org>

  * main/main.c: Accidentally commited a debug fprintf stmt in the last ci.

Fri Apr 20 13:42:12 CDT 2001 Adam Heath <doogie@debian.org>

  * main/main.c: Disabled --command-fd, until further testing can be done.

Fri Apr 20 13:02:23 CDT 2001 Adam Heath <doogie@debian.org>

  * po/fr.po: Fix typo.
  * debian/changelog: Close additional bugs, from other already commited
    patches.

Thu Apr 19 15:18:05 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/cl-debian.pl: make regexps for Closes consistent again

Thu Apr 19 13:36:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * utils/install-info.{c,8}: merge patch from Ian Jackson to add a
    --retry option to start-stop-daemon

Thu Apr 19 00:14:39 CDT 2001 Adam Heath <doogie@debian.org>

  * main/enquiry.c: Errors during dpkg -s(and other similiar commands) are
    now printed on stderr.

Thu Apr 19 00:03:16 CDT 2001 Adam Heath <doogie@debian.org>

  * main/archives.c:  Apply patch from Fumitoshi UKAI <ukai@debian.or.jp>,
    that escapes invalid characters in filenames(intl).

Wed Apr 18 23:53:40 CDT 2001 Adam Heath <doogie@debian.org>

  * lib/database.c: In blankpackage, intialize ->installed and ->available.
    Found by me and Fumitoshi UKAI <ukai@debian.or.jp>.  This should help
    several segfaults that people have been seeing in dpkg.

Wed Apr 18 23:42:16 CDT 2001 Adam Heath <doogie@debian.org>

  * lib/mlib.c: If the buffer size is 0 in buffer_copy, then return, and
    do nothing.

Wed Apr 18 23:42:16 CDT 2001 Adam Heath <doogie@debian.org>

  * configure.in, debian/control: New upstream gettext.  Since we had
    to change our build, to comply with the new upstream, we also
    need to modify the build-depends.
  * po/dpkg.pot, po/nl.po: Fixed broken translations.

Wed Apr 18 18:01:21 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/install-info.{8,pl}: modify install-info to take relative